--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li><a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
       </ul>
       <div id="email-container">
-        <ion-icon name="mail-outline"></ion-icon><a href="mailto:matheus@horadecodar.com.br">matheus@horadecodar.com.br</a>
+        <ion-icon name="mail-outline"></ion-icon><a href="mailto:caioetche@hotmail.com">caioetche@hotmail.com</a>
       </div>
     </aside>
     <section id="about-container">
