--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <p id="welcome-text">Seja bem-vindo!</p>
       <ul id="social-container">
         <li><a href="#" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a></li>
-        <li><a href="#" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-        <li><a href="#" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
+        <li><a href="https://www.linkedin.com/in/caio-alexandre-carmargo-etchebehere/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+        <li><a href="https://www.instagram.com/caio.etc192/?igshid=NGVhN2U2NjQ0Yg%3D%3D&utm_source=qr" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a></li>
       </ul>
       <div id="email-container">
         <ion-icon name="mail-outline"></ion-icon><a href="mailto:caioetche@hotmail.com">caioetche@hotmail.com</a>
